chore: ignore node_modules and .env
